# GGMFlowPartModeller

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.py  compile_commands.json  conanfile.py  imgui.ini  pump_project.ggm
cmake/: CopyRuntimeDlls.cmake  Run-VsDevCmd.ps1
docs/: windows-build.md
docs/superpowers/specs/: 2026-04-16-refactoring-design.md
lib/qcustomplot/: CMakeLists.txt
src/: CMakeLists.txt  ggmfpm_entrypoint.cpp  ggmfpm_mainwindow.cpp  ggmfpm_mainwindow.hpp  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: area_profile.hpp  async_flow_solver.hpp  async_geometry_optimizer.hpp  blade_geometry.hpp  blade_params.hpp  blade_results.hpp  blade_solver.hpp  computation_settings.hpp  error.hpp  fem_solver.hpp  flow_solver.hpp  flow_solver_types.hpp  geometry.hpp  geometry_optimizer.hpp  logging.hpp  pump_model.hpp  pump_params.hpp  serialization.hpp  streamline_extractor.hpp  strip_grid.hpp  target_area_curve.hpp  velocity_field.hpp
src/core/src/: area_profile.cpp  async_flow_solver.cpp  async_geometry_optimizer.cpp  blade_geometry.cpp  blade_solver.cpp  fem_solver.cpp  flow_solver.cpp  geometry.cpp  geometry_optimizer.cpp  logging.cpp  pump_model.cpp  serialization.cpp  streamline_extractor.cpp  strip_grid.cpp  target_area_curve.cpp  velocity_field.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: application.hpp  solver_status_display.hpp  theme.hpp
src/gui/include/gui/commands/: edit_command.hpp  undo_stack.hpp
src/gui/include/gui/layout/: dockspace.hpp
src/gui/include/gui/panels/: blade_design_panel.hpp  charts_panel.hpp  geometry_panel.hpp  log_panel.hpp  params_panel.hpp  reverse_design_panel.hpp  settings_panel.hpp
src/gui/include/gui/renderer/: blade_plan_renderer.hpp  fbo.hpp  geometry_renderer.hpp  render_settings.hpp  viewport_map.hpp
src/gui/include/gui/renderer/geometry/: geometry_render_types.hpp  mesh_renderer_2d.hpp  plot_viewport.hpp  sdf_line_renderer_2d.hpp
src/gui/include/gui/renderer/opengl/: gl_buffer.hpp  gl_shader_program.hpp  gl_state_guard.hpp  gl_vertex_array.hpp  render_target_2d.hpp
src/gui/include/gui/ui/: area_curve_editor.hpp  panel_style.hpp
src/gui/include/gui/window/: app_window.hpp
src/gui/src/: application.cpp  solver_status_display.cpp  theme.cpp
src/gui/src/commands/: edit_command.cpp  undo_stack.cpp
src/gui/src/layout/: dock_utils.hpp  dockspace.cpp
src/gui/src/panels/: blade_design_panel.cpp  charts_panel.cpp  geometry_panel.cpp  log_panel.cpp  params_panel.cpp  reverse_design_panel.cpp  settings_panel.cpp
src/gui/src/renderer/: blade_plan_renderer.cpp  fbo.cpp  geometry_renderer.cpp  gl_headers.hpp
src/gui/src/renderer/geometry/: mesh_renderer_2d.cpp  plot_viewport.cpp  sdf_line_renderer_2d.cpp
src/gui/src/renderer/opengl/: gl_buffer.cpp  gl_shader_program.cpp  gl_state_guard.cpp  gl_vertex_array.cpp  render_target_2d.cpp
src/gui/src/ui/: area_curve_editor.cpp  panel_style.cpp
src/gui/src/window/: app_window.cpp
src/math/: CMakeLists.txt
src/math/include/math/: arc_length.hpp  bezier.hpp  nurbs.hpp  types.hpp
src/math/src/: arc_length.cpp  bezier.cpp  nurbs.cpp  placeholder.cpp
tests/: CMakeLists.txt  bench_hotpaths.cpp  test_core_blade_geometry.cpp  test_core_blade_solver.cpp  test_core_fem_solver.cpp  test_core_geometry.cpp  test_core_geometry_optimizer.cpp  test_core_serialization.cpp  test_core_streamline_extractor.cpp  test_core_strip_grid.cpp  test_core_target_area_curve.cpp  test_core_velocity_field.cpp  test_gui_geometry_rendering.cpp  test_gui_undo_stack.cpp  test_math_arc_length.cpp  test_math_bezier.cpp  test_math_nurbs.cpp
ui/: ggmfpm_mainwindow.ui
